--- a/templates/profile/cryptocoin/coin-detail.html
+++ b/templates/profile/cryptocoin/coin-detail.html
@@ -92,15 +92,15 @@
                                 <div class="col-lg-4 col-12 mb-20">
                                     <div class="row mbn-15">
                                         <div class="col-12 mb-15">
-                                            <label>Amount</label>
-                                            {{ form.amount_deposited|add_class:"form-control" }}
+                                            <label style="color: #ffffff!important;">Amount</label>
+                                            {{ form.amount_deposited|add_class:"form-control"  }}
                                         </div>
                                         <div class="col-12 mb-15">
-                                            <label>Your Coin</label>
+                                            <label style="color: #ffffff!important;">Your Coin</label>
                                                 {{ form.coin_selected|add_class:"form-control" }}
                                         </div>
                                         <div class="col-12 mb-15">
-                                            <label>Transaction ID</label>
+                                            <label style="color: #ffffff!important;">Transaction ID</label>
                                             {{ form.transaction_id|add_class:"form-control" }}
                                         </div>
                                     </div><br>
