--- a/templates/profile/deposit/investment.html
+++ b/templates/profile/deposit/investment.html
@@ -71,5 +71,177 @@
                     </div>
                 </div>
                 <!--Form Size End-->
+
+        <!-- Pricing Four Start -->
+            <h3 class="text-center mb-35">MKB Coin Investment Package</h3>
+            <div class="row justify-content-center ">
+
+                <div class="pricing-four col-xlg-3 col-md-6 col-12 mb-30">
+                    <div class="inner">
+
+                        <div class="head" style="background-image: url(assets/images/bg/pricing-four-head-1-bg.jpg)">
+                            <div class="left">
+                                <div class="icon"><img src="assets/images/icons/pricing-four-1.png" alt=""></div>
+                                <h4 class="title">Free</h4>
+                            </div>
+                            <div class="right">
+                                <h1 class="price">$00.00</h1>
+                            </div>
+                        </div>
+
+                        <div class="body">
+                            <ul>
+                                <li>
+                                    <h5>Disk Space 10GB</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>Free Online Support</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>1 Free Domain</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>7 Days Return</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="foot text-center">
+                            <button class="button button-outline button-success">Choose Plan</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="pricing-four col-xlg-3 col-md-6 col-12 mb-30">
+                    <div class="inner">
+
+                        <div class="head" style="background-image: url(assets/images/bg/pricing-four-head-2-bg.jpg)">
+                            <div class="left">
+                                <div class="icon"><img src="assets/images/icons/pricing-four-2.png" alt=""></div>
+                                <h4 class="title">Basic</h4>
+                            </div>
+                            <div class="right">
+                                <h1 class="price">$36.00</h1>
+                            </div>
+                        </div>
+
+                        <div class="body">
+                            <ul>
+                                <li>
+                                    <h5>Disk Space 20GB</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>Free Online Support</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>2 Free Domain</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>15 Days Return</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="foot text-center">
+                            <button class="button button-outline button-success">Choose Plan</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="pricing-four col-xlg-3 col-md-6 col-12 mb-30">
+                    <div class="inner">
+
+                        <div class="head" style="background-image: url(assets/images/bg/pricing-four-head-3-bg.jpg)">
+                            <div class="left">
+                                <div class="icon"><img src="assets/images/icons/pricing-four-3.png" alt=""></div>
+                                <h4 class="title">Pro</h4>
+                            </div>
+                            <div class="right">
+                                <h1 class="price">$50.00</h1>
+                            </div>
+                        </div>
+
+                        <div class="body">
+                            <ul>
+                                <li>
+                                    <h5>Disk Space 30GB</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>Free Online Support</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>5 Free Domain</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>30 Days Return</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="foot text-center">
+                            <button class="button button-outline button-success">Choose Plan</button>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="pricing-four col-xlg-3 col-md-6 col-12 mb-30">
+                    <div class="inner">
+
+                        <div class="head" style="background-image: url(assets/images/bg/pricing-four-head-4-bg.jpg)">
+                            <div class="left">
+                                <div class="icon"><img src="assets/images/icons/pricing-four-4.png" alt=""></div>
+                                <h4 class="title">Pro+</h4>
+                            </div>
+                            <div class="right">
+                                <h1 class="price">$90.00</h1>
+                            </div>
+                        </div>
+
+                        <div class="body">
+                            <ul>
+                                <li>
+                                    <h5>Disk Space 50GB</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>Free Online Support</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>10 Free Domain</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                                <li>
+                                    <h5>60 Days Return</h5>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="foot text-center">
+                            <button class="button button-outline button-success">Choose Plan</button>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div><!-- Pricing Four End -->
+
+
         </div><!-- Content Body End -->
 {% endblock %}
