--- a/templates/profile/dashboard/index.html
+++ b/templates/profile/dashboard/index.html
@@ -99,8 +99,8 @@
 
                         <!-- Content -->
                         <div class="content">
-                            <h5>Todays</h5>
-                            <h2>{{ refer_bonus }}</h2>
+                            <h5 style="color: #ffffff!important;">Todays</h5>
+                            <h2 style="color: #ffffff!important;">{{ refer_bonus }}</h2>
                         </div>
 
                         <!-- Footer -->
@@ -108,7 +108,7 @@
                             <div class="progess">
                                 <div class="progess-bar" style="width: 100%;"></div>
                             </div>
-                            <p>Recent refer bonus</p>
+                            <p style="color: #ffffff!important;">Recent refer bonus</p>
                         </div>
 
                     </div>
@@ -142,8 +142,47 @@
                 </div><!-- Top Report End -->
             </div><!-- Top Report Wrap End -->
 
-            <div class="row mbn-30">
 
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_f2bed"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BTCUSDT/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">BTCUSDT chart</span></a> by Meek Broker</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "width": 380,
+  "height": 610,
+  "symbol": "BINANCE:BTCUSDT",
+  "timezone": "Etc/UTC",
+  "theme": "dark",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": true,
+  "withdateranges": true,
+  "range": "ALL",
+  "hide_side_toolbar": false,
+  "allow_symbol_change": true,
+  "details": true,
+  "hotlist": true,
+  "calendar": true,
+  "show_popup_button": true,
+  "popup_width": "1000",
+  "popup_height": "650",
+  "container_id": "tradingview_f2bed"
+}
+  );
+  </script>
+
+     <p class="header-btn" style="float: left"><a href="#" class="btn">Buy</a></p>
+            <p class="header-btn" style="float: right"><a href="#" class="btn">Sell</a></p>
+</div>
+<!-- TradingView Widget END -->
+
+
+
+            <div class="row mbn-30">
                 <!-- Revenue Statistics Chart Start -->
                 <div class="col-md-8 mb-30">
                     <div class="box">
