--- a/templates/profile/signup/login.html
+++ b/templates/profile/signup/login.html
@@ -23,6 +23,12 @@
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             </div>
 
+                        {% for message in messages %}
+                            <div class="message {{ message.tags }}">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+
                             <div class="login-register-form">
                                 <form action=" " method="POST">
                                     {% csrf_token %}
@@ -50,7 +56,7 @@
                                         </div>
                                         <div class="col-12">
                                             <div class="row justify-content-between">
-                                                <div class="col-auto mb-15"><a href="#">Forgot Password?</a></div>
+                                                <div class="col-auto mb-15"><a href="/password_reset/">Forgot Password?</a></div>
                                                 <div class="col-auto mb-15">Dont have account? <a href="/signup/">Create Now.</a></div>
                                             </div>
                                         </div>
