--- a/templates/profile/withdrawal/withdrawal-request.html
+++ b/templates/profile/withdrawal/withdrawal-request.html
@@ -18,11 +18,67 @@
                 </div><!-- Page Heading End -->
 
             </div><!-- Page Headings End -->
+
+<style>
+
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-bottom: 15px;
+}
+
+.alert.success {background-color: #04AA6D;}
+.alert.info {background-color: #086db9;}
+.alert.warning {background-color: #ff9800;}
+
+.closebtn {
+  margin-left: 15px;
+  color: #13cb0d;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: #de063f;
+}
+</style>
+
+<div class="alert info">
+  <span class="closebtn">&times;</span>
+  <strong style="color: #02440b">Info!</strong><br>
+    <span style="color: greenyellow">Currently, the TRC20 network is not available for withdrawal
+        because of its withdrawal charge.
+        So we are requesting you now to select another network that is fit for you. </span>
+<p></p>
+    <span style="color: #ffffff">We are working to add local currency bank/mobile banking in your country so that you may withdraw your funds the easiest way. </span>
+    <span style="color: #ffffff">Also in the same time we are working to launch MKB Coin in 28 February. In this time the withdrawal method is not available.  </span>
+</div>
+
+<script>
+var close = document.getElementsByClassName("closebtn");
+var i;
+
+for (i = 0; i < close.length; i++) {
+  close[i].onclick = function(){
+    var div = this.parentElement;
+    div.style.opacity = "0";
+    setTimeout(function(){ div.style.display = "none"; }, 600);
+  }
+}
+</script>
+
         <!--Form Size Start-->
                 <div class="col-12 mb-30">
                     <div class="box">
 
-                        <form action="" method="post">
+                        <form>
                             {% csrf_token %}
 
                         {% if messages %}
@@ -74,9 +130,9 @@
                             </div>
                         </div>
                             </form>
-{#                        <div class="box-foot">#}
-{#                            <p>Control Size using classes like <code>.form-control-sm or .form-control-lg</code> classes.</p>#}
-{#                        </div>#}
+                        <div class="box-foot">
+                            <p>Control Size using classes like <code>.form-control-sm or .form-control-lg</code> classes.</p>
+                        </div>
                     </div>
                 </div>
                 <!--Form Size End-->
